Fix history spacing

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -134,7 +134,7 @@
     font-size: 20px;
     border: 5px solid #B3B3B3;
     font-family: "Lucida Console", "Courier New", monospace;
-    white-space: pre;
+    white-space: pre-wrap;
     overflow: hidden;
 }
 
